# pathfinder

./: .gitignore
demo/common/: Cargo.toml
demo/common/src/: device.rs  lib.rs  renderer.rs  ui.rs  window.rs
demo/magicleap/src/: display.rs  glwindow.rs  immersive.rs  lib.rs
demo/native/src/: main.rs
docs/: intro.md
examples/canvas_minimal/src/: main.rs
geometry/src/: color.rs
geometry/src/basic/: transform2d.rs
gfx-hal/: Cargo.toml
gfx-hal/src/: lib.rs
gl/src/: lib.rs
gpu/: Cargo.toml
gpu/src/: batch_primitives.rs  lib.rs  pipeline.rs  pipeline_layout.rs  pipeline_state.rs  pipelines.rs  render_pass.rs  render_pass_descs.rs
renderer/: Cargo.toml
renderer/src/: gpu_data.rs
renderer/src/gpu/: mod.rs  pipeline_descriptions.rs  pipeline_dsl_bindings.rs  pipeline_layout_descs.rs  pipelines.rs  render_pass_descriptions.rs  renderer-gfx-hal.rs  renderer-old.rs  renderer.rs
resources/shaders/: fill.fs.glsl  fill.vs.glsl  post.fs.glsl  post.vs.glsl  post_convolve.inc.glsl  post_gamma_correct.inc.glsl  reproject.fs.glsl  reproject.vs.glsl  stencil.fs.glsl  stencil.vs.glsl  tile_alpha.fs.glsl  tile_alpha_monochrome.vs.glsl  tile_alpha_multicolor.vs.glsl  tile_alpha_vertex.inc.glsl  tile_monochrome.inc.glsl  tile_multicolor.inc.glsl  tile_solid.fs.glsl  tile_solid_monochrome.vs.glsl  tile_solid_multicolor.vs.glsl  tile_solid_vertex.inc.glsl
svg/src/: lib.rs
ui/src/: lib.rs
